@@ -1,4 +1,4 @@
-CONFIG_XT=n
+CONFIG_ARCH_AUTO=y
 CONFIG_MODULE=n
 CONFIG_COMPAQ_FAST=n
 
